# avif-kmp

./: .gitmodules  README.md  build-mac.sh  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: build.yaml
androidApp/: build.gradle.kts
avif/: build.gradle.kts
avif-compose/: build.gradle.kts
avif-compose/src/androidMain/kotlin/com/seiko/avif/compose/: PlatformBitmap.android.kt
avif-compose/src/commonMain/kotlin/com/seiko/avif/compose/: PlatformBitmap.kt
avif-compose/src/skiaMain/kotlin/com/seiko/avif/compose/: PlatformBitmap.skia.kt
avif/darwin/: build.gradle.kts  ios.toolchain.cmake
avif/darwin/crossfiles/darwin/: x86_64-apple-darwin.meson
avif/darwin/crossfiles/ios/: x86_64-ios.meson
avif/darwin/scripts/: build-android.sh  build-darwin.sh  build-ios.sh  build-native.sh
avif/src/commonMain/kotlin/com/seiko/avif/: AvifDecoder.kt  Closeable.kt
avif/src/jniMain/cpp/: avifDecoderJni.cpp  avifImageJni.cpp  helperJni.h
avif/src/jniMain/kotlin/com/seiko/avif/: AvifDecoder.kt  AvifFrame.kt  PlatformBitmapPtr.kt
avif/src/jvmMain/: CMakeLists.txt
avif/src/jvmMain/kotlin/com/seiko/avif/: PlatformBitmapPtr.jvm.kt
avif/src/nativeMain/kotlin/com/seiko/avif/: AvifDecoder.kt  AvifFrame.kt  Closeable.native.kt
iosApp/iosApp.xcodeproj/: project.pbxproj
shared/: build.gradle.kts
shared/src/androidMain/kotlin/: main.android.kt
shared/src/commonMain/kotlin/: App.kt
shared/src/commonMain/resources/: test_anime.avif
shared/src/desktopMain/kotlin/: main.desktop.kt
shared/src/iosMain/kotlin/: main.ios.kt
